--- a/index.html
+++ b/index.html
@@ -5,21 +5,187 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/styles.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>Centro Médico Puerta de Hierro</title>
 </head>
 <!--Barra navegacion-->
 <header class="header">
     <nav class="nav">
         <ul class="ul">
-            <li class="li"><a href="index.html">Inicio</a></li>
-            <li class="li"><a href="registro.php">Registrarse</a></li>
-            <li class="li"><a href="iniciarSesion.php">Iniciar sesión</a></li>
+            <li class="li"><a class="nav-registro" href="registro.php">Registrarse</a></li>
+            <li class="li"><a class="nav-registro" href="iniciarSesion.php">Iniciar sesión</a></li>
         </ul>
     </nav>
 </header>
+<nav class="navbar navbar-expand-md sticky-top" style="background-color: #e3f2fd;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">
+        <img src="Assets/Logo CMPH.png" alt="" width="80" height="">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link" href="/">Inicio</a>
+          <a class="nav-link" href="#">Acerca</a>
+          <a class="nav-link" href="#servicios">Servicios</a>
+          <a class="nav-link" href="#">Citas</a>
+          <a class="nav-link" href="#medicos">Médicos</a>
+          <a class="nav-link" href="#">Departamentos</a>
+          <a class="nav-link" href="#">Blog</a>
+          <a class="nav-link" href="#">Conctacto</a>
+        </div>
+      </div>
+    </div>
+  </nav>
 <h1 class="titulo">Centro Médico Puerta de Hierro</h1>
 <body>
-    
+    <!--Carrusel-->
+    <div id="carouselCM" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselCM" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselCM" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselCM" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <img src="Assets/urgencias.jpg" class="d-block w-100" alt="urgencias">
+            <div class="carousel-caption d-block">
+              <h5>Urgencias</h5>
+              <p class="d-none d-sm-block">Contamos con servicio de urgencias las 24 horas, los 7 días de la semana, en todos nuestros hospitales. Médicos urgenciólogos y primera atención ambulatoria. Consultas, tratamientos y aplicación de medicamentos.
+              </p>
+              <a class="btn btn-info" href="Servicios/urgencias.html" role="button">Más información</a>
+            </div>
+          </div>
+
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="Assets/laboratorio-1.jpg" class="d-block w-100" alt="laboratorio">
+            <div class="carousel-caption">
+              <h5>Laboratorio Clínico</h5>
+              <p class="d-none d-sm-block">En laboratorios Puerta de Hierro ofrecemos una gama de más de 3000 estudios clínicos. En conjunto con Mayo Clinic Laboratories, se cubren la mayoría de las pruebas de laboratorio superespecializadas.</p>
+              <a class="btn btn-info" href="Servicios/analisis-clinicos.html" role="button">Más información</a>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <img src="Assets/diagnostico-imagen.jpg" class="d-block w-100" alt="diagnostico">
+            <div class="carousel-caption">
+              <h5>Diagnóstico por imagen</h5>
+              <p class="d-none d-sm-block">En Hospitales Puerta de Hierro contamos con personal altamente capacitado para la realización de diagnósticos precisos a través de imagen médica (mastografía, rayos x, ultrasonido, tomografía, entre otros).</p>
+              <a class="btn btn-info" href="Servicios/diagnostico-imagen.html" role="button">Más información</a>
+            </div>
+          </div>
+        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselCM" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselCM" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <br><br><br>
+
+      <!--Servicios-->
+      <h1 class="titulo" id="servicios" style="background-color: #e3f2fd;">Servicios</h1><br><br>
+      <div class="container">
+        <div class="row align-items-center p-4">
+            <div class="col-md-4">
+                <img src="Assets/serv-urgencias.png" class="d-block w-75 mx-auto" alt="urgencias">
+            </div>
+            <div class="col-md-8">
+                <h5 class="fw-bold fs-4 text-center">Urgencias</h5>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque dicta illo sapiente. Quos, dolorum alias magnam nemo eum dolores obcaecati repudiandae, neque delectus consectetur est facilis optio iste molestias nisi.</p>
+            </div>
+          </div>
+          <div class="row align-items-center p-4">
+            <div class="col-md-4">
+                <img src="Assets/serv-analisis.png" class="d-block w-75 mx-auto" alt="analisis">
+            </div>
+            <div class="col-md-8">
+                <h5 class="fw-bold fs-4 text-center">Laboratorio clínico</h5>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque dicta illo sapiente. Quos, dolorum alias magnam nemo eum dolores obcaecati repudiandae, neque delectus consectetur est facilis optio iste molestias nisi.</p>
+            </div>
+          </div>
+          <div class="row align-items-center p-4">
+            <div class="col-md-4">
+                <img src="Assets/serv-check.png" class="d-block w-75 mx-auto" alt="checkups">
+            </div>
+            <div class="col-md-8">
+                <h5 class="fw-bold fs-4 text-center">Checkups</h5>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque dicta illo sapiente. Quos, dolorum alias magnam nemo eum dolores obcaecati repudiandae, neque delectus consectetur est facilis optio iste molestias nisi.</p>
+            </div>
+          </div>
+          <div class="row align-items-center p-4">
+            <div class="col-md-4">
+                <img src="Assets/serv-hospital.png" class="d-block w-75 mx-auto" alt="hospitalización">
+            </div>
+            <div class="col-md-8">
+                <h5 class="fw-bold fs-4 text-center">Hospitalización</h5>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque dicta illo sapiente. Quos, dolorum alias magnam nemo eum dolores obcaecati repudiandae, neque delectus consectetur est facilis optio iste molestias nisi.</p>
+            </div>
+          </div>
+          <div class="row align-items-center p-4">
+            <div class="col-md-4">
+                <img src="Assets/serv-terapia.png" class="d-block w-75 mx-auto" alt="terapia">
+            </div>
+            <div class="col-md-8">
+                <h5 class="fw-bold fs-4 text-center">Terapia intensiva</h5>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque dicta illo sapiente. Quos, dolorum alias magnam nemo eum dolores obcaecati repudiandae, neque delectus consectetur est facilis optio iste molestias nisi.</p>
+            </div>
+          </div>
+          <div class="row align-items-center p-4">
+            <div class="col-md-4">
+                <img src="Assets/serv-imagen.png" class="d-block w-75 mx-auto" alt="diagnostico-imagen">
+            </div>
+            <div class="col-md-8">
+                <h5 class="fw-bold fs-4 text-center">Diagnóstico por imágen</h5>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque dicta illo sapiente. Quos, dolorum alias magnam nemo eum dolores obcaecati repudiandae, neque delectus consectetur est facilis optio iste molestias nisi.</p>
+            </div>
+            </div>
+      </div>
+      <br><br><br>
+
+      <!--Médicos-->
+
+      <h1 class="titulo" id="medicos" style="background-color: #e3f2fd;">Conoce a nuestros médicos</h1><br><br>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col p-3">
+            <div class="card text-center p-4" style="width: 20rem;">
+              <img src="Assets/doctora.png" class="card-img-top" alt="doctora">
+              <div class="card-body">
+                <h5 class="card-title">Verónica Ruíz Manzo</h5>
+                <p class="card-text">Cardiología</p>
+              </div>
+            </div>
+          </div>
+          <div class="col p-3">
+            <div class="card text-center p-4" style="width: 20em;">
+              <img src="Assets/medico.png" class="card-img-top" alt="médico">
+              <div class="card-body">
+                <h5 class="card-title">Pedro Rodríguez García</h5>
+                <p class="card-text">Hematólogo</p>
+              </div>
+            </div>
+          </div>
+          <div class="col p-3">
+            <div class="card text-center p-4" style="width: 20rem;">
+              <img src="Assets/dentista.png" class="card-img-top" alt="dentista">
+              <div class="card-body ">
+                <h5 class="card-title">Rosa López Deniz</h5>
+                <p class="card-text">Dentista</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 <footer>
 
